--- a/starwars/src/sass/App.scss
+++ b/starwars/src/sass/App.scss
@@ -1,10 +1,13 @@
 @import './character.scss';
-
+html {
+  font-size: 62.5%;
+}
 .App {
   text-align: center;
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
+  font-size: 4rem;
 }
 /* write your parent styles in here for your App.js */
