--- a/starwars/src/sass/character.scss
+++ b/starwars/src/sass/character.scss
@@ -9,6 +9,11 @@
   .card {
     width: 200px;
     margin: 20px;
+    font-size: 1.5rem;
 
+    .card-header {
+        background-color: gray;
+        font-size: 2rem;
+    }
   }
 }
